public/assets/src/opennemas-webarch/less/helpers/_utils.less
::-moz-selection {
  background: #357AE8; color: #fff; text-shadow: none;
}

::selection {
  background: #357AE8; color: #fff; text-shadow: none;
}
:focus {
  -moz-outline-style: none;
}

.absolute {
  position: absolute !important;
}

.block {
  display: block;
  width: 100%;
}

.nowrap {
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.no-overflow {
  overflow: visible;
}

.left {
  text-align:left !important;
}

.right {
  text-align:right !important;
}

.center {
  text-align:center !important;
}

.cursor-text {
  cursor: text;
}

.no-b-t {
  border-top: 0 !important;
}

.no-animate {
  animation-duration: 0s !important;
  -webkit-transition: none !important;
  transition: none !important;
}

.no-overflow {
  overflow: visible !important;
}

.no-style {
  list-style: none;
  margin: 0;
  padding: 0;
}

.no-style li {
  margin: 0;
  padding: 0;
}

.pointer {
  cursor: pointer !important;
}

.transparent {
  opacity: 0;
}

.b-r-0 {
  border-right: none !important;
}

.b-t-0 {
  border-top: none !important;
}

.m-l-3 {
  margin-left: 3px !important;
}

.m-l-5 {
  margin-left: 5px !important;
}

.m-t-2 {
  margin-top: 2px !important;
}

.m-t-5 {
  margin-top: 5px !important;
}

.m-b-5 {
  margin-bottom: 5px !important;
}

.m-r-5 {
  margin-right: 5px !important;
}

.m-r-10 {
  margin-right: 10px !important;
}

.m-t-10 {
  margin-top: 10px !important;
}

.m-t-15 {
  margin-top: 15px !important;
}

.m-t-30 {
  margin-top: 30px !important;
}

.m-b-15 {
  margin-bottom: 15px !important;
}

.p-l-5 {
  padding-left: 5px !important;
}

.p-l-7 {
  padding-left: 7px !important;
}

.p-l-10 {
  padding-left: 10px !important;
}

.p-r-3 {
  padding-right: 3px;
}

.p-r-5 {
  padding-right: 5px !important;
}

.p-t-7 {
  padding-top: 7px !important;
}

.p-t-8 {
  padding-top: 8px !important;
}

.pull-bottom {
  bottom: 0;
  position: absolute;

  &.pull-left {
    left: 0;
  }

  &.pull-right {
    right: 0;
  }
}

.text-bold {
  font-weight: bold;
}

.text-default {
  color: @text-color;
}

.text-italic {
  font-style: italic;
}

.text-facebook {
  color: @facebook-color;
}

.text-google {
  color: @google-color;
}

.text-twitter {
  color: @twitter-color;
}

.uppercase {
  text-transform: uppercase;
}

.v-align-middle {
  vertical-align: middle !important;
}

.wrap {
  white-space: normal;
}

.cursor-pointer {
  cursor: pointer;
}

